Edit/Update,Create, Delete. just need to validate without routes breaking on empty fields. and create comments, one to many

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -33,6 +33,15 @@ body {
   
 }
 
+.thought {
+  background-color: white; 
+  border-radius: 1rem;
+  text-align: center;
+   margin: 1rem; 
+   padding:1rem; 
+   margin-left: 33%;
+   width: 30%;
+}
 
 .row {
   color: grey;
