--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="Container" style="text-align:center;">
 <h1>Edit Post</h1>
 
 <%= form_for @post do |f| %>
@@ -12,3 +13,5 @@
 </p><BR>
 <%= f.submit :post, :class => "btn" %>
 <% end %>
+
+</div>
